chore(backend): update Redis cache configuration and align controllers, enums, repositories, and services for improved caching and Kafka integration